network map test

--- a/map.html
+++ b/map.html
@@ -124,7 +124,7 @@
 <div class="nsw-m-right-md nsw-m-left-md nsw-p-top-md nsw-p-bottom-md">
 <div id="map_embed">
     <script src="./js/pdfobject.js"></script>
-    <script>PDFObject.embed("./pdf/Thornsbury-train-network.pdf", "#map_embed");</script>
+    <script>PDFObject.embed("./pdf/Thornsbury train network.pdf", "#map_embed");</script>
     <style>
         .pdfobject-container { height: 30rem; }
     </style>
