--- a/map.html
+++ b/map.html
@@ -27,7 +27,7 @@
     <a href="#"><span>Skip to content</span></a>
   </nav>
   <div class="nsw-masthead nsw-masthead--light">
-    <div class="nsw-container"><strong>IP: play.harlonserver.net - Minecraft 1.20.4 with Optifine</strong></div>
+    <div class="nsw-container"><strong>DEMONSTRATION WEBSITE</strong></div>
   </div>
 
   <header class="nsw-header">
@@ -94,8 +94,8 @@
   <div class="nsw-global-alert nsw-global-alert--light js-global-alert" role="alert">
     <div class="nsw-global-alert__wrapper">
       <div class="nsw-global-alert__content">
-        <div class="nsw-global-alert__title">Minecraft 1.20.4 Upgrade</div>
-        <p>We have now upgraded to Minecraft version 1.20.4. Please note that <strong>backward compatibility with older versions of Minecraft has been removed</strong> - you can now only join the server with version 1.20.4. Forward compatibility will continue to be provided once new versions of Minecraft are released.</p>
+        <div class="nsw-global-alert__title">This website is still under construction</div>
+        <p>We are currently improving the Transnet website, <strong>this website is only a demonstration and is expected to break</strong> - by pressing the X, you acknowledge that this site may not work as intended</p>
       </div>
       <button class="nsw-icon-button js-close-alert" type="button" aria-expanded="true">
         <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">close</span>
@@ -111,11 +111,11 @@
     <div class="nsw-hero-banner__container">
       <div class="nsw-hero-banner__wrapper">
         <div class="nsw-hero-banner__content">
-          <h1>HarlonTransit Map</h1>
-          <p class="nsw-intro">HarlonTransit's official map is a reliable companion for navigating our network.</p>
+          <h1>Network Map</h1>
+          <p class="nsw-intro">The network map for navigating our growing suburban and regional railway network.</p>
         </div>
         <div class="nsw-hero-banner__box">
-          <img class="nsw-hero-banner__image" src="./img/unique.jfif" alt="Image of a HarlonTransit bus." />
+          <img class="nsw-hero-banner__image" src="./img/C6001.png" alt="C Set 6001 headed towards Carisle" />
         </div>
       </div>
     </div>
