--- a/map.html
+++ b/map.html
@@ -5,17 +5,17 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="utf-8">
-  <title>Map | Harlon Transit</title>
-  <meta name="description" content="HarlonTransit's official map is a reliable companion for navigating our network.">
-  <meta property="og:title" content="Map | Harlon Transit">
+  <title>Map - Transnet</title>
+  <meta name="description" content="The network map for navigating our growing suburban and regional railway network.">
+  <meta property="og:title" content="Map - Transnet">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://ht.harlonserver.net">
-  <meta name="og:description" content="HarlonTransit's official map is a reliable companion for navigating our network.">
-  <meta property="og:image" content="https://ht.harlonserver.net/img/unique.jfif">
+  <meta property="og:url" content="/">
+  <meta name="og:description" content=">The network map for navigating our growing suburban and regional railway network.">
+  <meta property="og:image" content="img/C6001.png">
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="apple-touch-icon" href="/favicon.png">
+  <link rel="icon" href="/img/icon.png" sizes="any">
+  <link rel="apple-touch-icon" href="/img/icon.png">
   <!-- Place favicon.ico in the root directory -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/nsw-design-system@3/dist/css/main.css">
   <link rel="stylesheet" href="/css/hcs.css">
@@ -36,12 +36,9 @@
         <div class="nsw-header__main">
           <div class="nsw-header__waratah">
             <a href="/">
-              <img src="/favicon.ico" alt="" width="64px" height="64px"/>
-              <span class="sr-only">Harlon Transit</span>
+              <img src="/img/logo.png" alt="" height="64px"/>
+             
             </a>
-          </div>
-          <div class="nsw-header__name">
-            <div class="nsw-header__title">Harlon Transit</div>
           </div>
         </div>
         <div class="nsw-header__menu">
@@ -66,28 +63,20 @@
           <span>Home</span>
         </a>    </li>
       <li>
-        <a href="/map.html">
-          <span>Transport Map</span>
+        <a href="/map">
+          <span>Network Map</span>
           </a>    </li>
-      <!--<li>
+      <li>
         <a href="/about">
             <span>About</span>
-            </a>    </li>-->
+            </a>    </li>
       <!--<li>
-        <a href="https://parliament.harlonserver.net" target="_blank" rel="noopener noreferrer">
-          <span>Parliament</span>
+        <a href="https://railcomms.transnetpt.com" target="_blank" rel="noopener noreferrer">
+          <span>RailComms</span>
         </a>    </li>-->
       <li>
-        <a href="https://harlonserver.net" target="_blank" rel="noopener noreferrer">
-          <span>Main Harlon Website</span>
-        </a>    </li>
-      <li>
-        <a href="https://wiki.harlonserver.net" target="_blank" rel="noopener noreferrer">
-          <span>Wiki</span>
-        </a>    </li>
-      <li>
-        <a href="https://dynmap.harlonserver.net" target="_blank" rel="noopener noreferrer">
-          <span>Dynmap</span>
+        <a href="/travelsmart" target="_blank" rel="noopener noreferrer">
+          <span>TravelSmart</span>
         </a>    </li>
     </ul>
   </nav>
@@ -142,9 +131,9 @@
 <footer class="nsw-footer nsw-footer--dark">
   <div class="nsw-footer__lower">
     <div class="nsw-container">
-      <p>HarlonTransit: <strong>Keeping You Moving</strong></p>
-      <hr>
-      <ul>
+      <p style="color:#000">HarlonTransit: <strong>Keeping You Moving</strong></p>
+      <hr style="color:#000">
+      <ul style="color:#000">
         <li><a href="https://discord.gg/qMmk8MuEBz" target="_blank" rel="noopener noreferrer">Discord</a></li>
         <li><a href="https://youtube.com/channel/UCUsBniuYo4fKNWy-PcAoDNg" target="_blank" rel="noopener noreferrer">YouTube</a></li>
         <li><a href="https://twitter.com/HarlonServer" target="_blank" rel="noopener noreferrer">X/Twitter</a></li>
@@ -153,8 +142,8 @@
         <!--<li><a href="https://store.harlonserver.net" target="_blank" rel="noopener noreferrer">Server Store</a></li>-->
       </ul>
       <div class="nsw-footer__info">
-        <div class="nsw-footer__copyright">Copyright © Harlon City Server. NOT AN OFFICIAL MINECRAFT SERVER. NOT APPROVED BY OR ASSOCIATED WITH MOJANG OR MICROSOFT CORPORATION.</div>
-        <div class="nsw-footer__built">Powered by the <a href="https://digitalnsw.github.io/nsw-design-system/" target="_blank" rel="noopener noreferrer">NSW Design System,</a><a href="https://html5boilerplate.com/" target="_blank" rel="noopener noreferrer">HTML5 Boilerplate</a>and <a href="https://www.11ty.dev/" target="_blank" rel="noopener noreferrer">Eleventy.</a></div>
+        <div class="nsw-footer__copyright" style="color:#000">Copyright © 2024 - Transnet | Transnet is maintaned and controlled by the Thornsbury Government Department of Public Transport</div>
+<img src="/img/TG-DPT-logo.png" alt="Thornsbury Government - Department of Public Transport Logo" style="width: 25%">
       </div>
     </div>
   </div>
