--- a/map.html
+++ b/map.html
@@ -100,11 +100,11 @@
     <div class="nsw-hero-banner__container">
       <div class="nsw-hero-banner__wrapper">
         <div class="nsw-hero-banner__content">
-          <h1>Network Map</h1>
-          <p class="nsw-intro">The network map for navigating our growing suburban and regional railway network.</p>
+          <h1 style="color:#000">Network Map</h1>
+          <p class="nsw-intro" style="color:#000">The network map for navigating our growing suburban and regional railway network.</p>
         </div>
         <div class="nsw-hero-banner__box">
-          <img class="nsw-hero-banner__image" src="./img/C6001.png" alt="C Set 6001 headed towards Carisle" />
+          <img class="nsw-hero-banner__image " src="./img/C6001.png" alt="C Set 6001 headed towards Carisle" />
         </div>
       </div>
     </div>
