--- a/map.html
+++ b/map.html
@@ -36,7 +36,7 @@
         <div class="nsw-header__main">
           <div class="nsw-header__waratah">
             <a href="/">
-              <img src="/img/logo.png" alt="" height="64px"/>
+              <img src="/img/logo.png" alt="" height="32px"/>
              
             </a>
           </div>
@@ -134,16 +134,16 @@
       <p style="color:#000">HarlonTransit: <strong>Keeping You Moving</strong></p>
       <hr style="color:#000">
       <ul style="color:#000">
-        <li><a href="https://discord.gg/qMmk8MuEBz" target="_blank" rel="noopener noreferrer">Discord</a></li>
-        <li><a href="https://youtube.com/channel/UCUsBniuYo4fKNWy-PcAoDNg" target="_blank" rel="noopener noreferrer">YouTube</a></li>
-        <li><a href="https://twitter.com/HarlonServer" target="_blank" rel="noopener noreferrer">X/Twitter</a></li>
-        <li><a href="https://www.tiktok.com/@harlonserver" target="_blank" rel="noopener noreferrer">Tiktok</a></li>
-        <li><a href="https://www.github.com/HarlonServer" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+        <li><a style="color:#000" href="https://discord.gg/qMmk8MuEBz" target="_blank" rel="noopener noreferrer">Discord</a></li>
+        <li><a style="color:#000"  href="https://youtube.com/channel/UCUsBniuYo4fKNWy-PcAoDNg" target="_blank" rel="noopener noreferrer">YouTube</a></li>
+        <li><a  style="color:#000" href="https://twitter.com/HarlonServer" target="_blank" rel="noopener noreferrer">X/Twitter</a></li>
+        <li><a  style="color:#000" href="https://www.tiktok.com/@harlonserver" target="_blank" rel="noopener noreferrer">Tiktok</a></li>
+        <li><a  style="color:#000" href="https://www.github.com/HarlonServer" target="_blank" rel="noopener noreferrer">GitHub</a></li>
         <!--<li><a href="https://store.harlonserver.net" target="_blank" rel="noopener noreferrer">Server Store</a></li>-->
       </ul>
       <div class="nsw-footer__info">
         <div class="nsw-footer__copyright" style="color:#000">Copyright © 2024 - Transnet | Transnet is maintaned and controlled by the Thornsbury Government Department of Public Transport</div>
-<img src="/img/TG-DPT-logo.png" alt="Thornsbury Government - Department of Public Transport Logo" style="width: 25%">
+<img src="https://transnetpt.com/img/TG-DPT-logo.png" alt="Thornsbury Government - Department of Public Transport Logo" style="width: 25%">
       </div>
     </div>
   </div>
