--- a/map.html
+++ b/map.html
@@ -95,7 +95,7 @@
   
 </head>
 
-<body>
+<body style="letter-spacing: -0.0045em;">
     <div class="nsw-hero-banner nsw-hero-banner--dark">
     <div class="nsw-hero-banner__container">
       <div class="nsw-hero-banner__wrapper">
@@ -131,7 +131,7 @@
 <footer class="nsw-footer nsw-footer--dark">
   <div class="nsw-footer__lower">
     <div class="nsw-container">
-      <p style="color:#000">HarlonTransit: <strong>Keeping You Moving</strong></p>
+      <p style="color:#000">Transnet - <strong>Thornsbury's train, tram & bus operator.</strong></p>
       <hr style="color:#000">
       <ul style="color:#000">
         <li><a style="color:#000" href="https://discord.gg/qMmk8MuEBz" target="_blank" rel="noopener noreferrer">Discord</a></li>
