--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-  <nav class="nsw-skip nsw-skip--light" aria-label="Skip to links">
+   <nav class="nsw-skip nsw-skip--light" aria-label="Skip to links">
     <a href="#"><span>Skip to navigation</span></a>
     <a href="#"><span>Skip to content</span></a>
   </nav>
   <div class="nsw-masthead nsw-masthead--light">
-    <div class="nsw-container"><strong>IP: play.harlonserver.net - Minecraft 1.20.4 with Optifine</strong></div>
+    <div class="nsw-container"><strong>DEMONSTRATION WEBSITE</strong></div>
   </div>
 
   <header class="nsw-header">
@@ -36,12 +36,9 @@
         <div class="nsw-header__main">
           <div class="nsw-header__waratah">
             <a href="/">
-              <img src="/favicon.ico" alt="" width="64px" height="64px"/>
-              <span class="sr-only">Harlon Transit</span>
+              <img src="/img/logo.png" alt="" height="32px"/>
+             
             </a>
-          </div>
-          <div class="nsw-header__name">
-            <div class="nsw-header__title">Harlon Transit</div>
           </div>
         </div>
         <div class="nsw-header__menu">
@@ -67,35 +64,27 @@
         </a>    </li>
       <li>
         <a href="/map">
-          <span>Transport Map</span>
+          <span>Network Map</span>
           </a>    </li>
-      <!--<li>
+      <li>
         <a href="/about">
             <span>About</span>
-            </a>    </li>-->
+            </a>    </li>
       <!--<li>
-        <a href="https://parliament.harlonserver.net" target="_blank" rel="noopener noreferrer">
-          <span>Parliament</span>
+        <a href="https://railcomms.transnetpt.com" target="_blank" rel="noopener noreferrer">
+          <span>RailComms</span>
         </a>    </li>-->
       <li>
-        <a href="https://harlonserver.net" target="_blank" rel="noopener noreferrer">
-          <span>Main Harlon Website</span>
-        </a>    </li>
-      <li>
-        <a href="https://wiki.harlonserver.net" target="_blank" rel="noopener noreferrer">
-          <span>Wiki</span>
-        </a>    </li>
-      <li>
-        <a href="https://dynmap.harlonserver.net" target="_blank" rel="noopener noreferrer">
-          <span>Dynmap</span>
+        <a href="/travelsmart" target="_blank" rel="noopener noreferrer">
+          <span>TravelSmart</span>
         </a>    </li>
     </ul>
   </nav>
   <div class="nsw-global-alert nsw-global-alert--light js-global-alert" role="alert">
     <div class="nsw-global-alert__wrapper">
       <div class="nsw-global-alert__content">
-        <div class="nsw-global-alert__title">Trip Planner Out of Service</div>
-        <p>The HarlonTransit Trip Planner is out of service. A replacement trip planner will be developed and released to coincide with the opening of mainline services operated by Harlonian National. We apologise for any inconvenience caused.</p>
+        <div class="nsw-global-alert__title">This website is still under construction</div>
+        <p>We are currently improving the Transnet website, <strong>this website is only a demonstration and is expected to break</strong> - by pressing the X, you acknowledge that this site may not work as intended</p>
       </div>
       <button class="nsw-icon-button js-close-alert" type="button" aria-expanded="true">
         <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">close</span>
@@ -105,6 +94,7 @@
   </div>
   
 </head>
+
 
 <body>
   
