--- a/map.html
+++ b/map.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Map - Transnet">
   <meta property="og:type" content="website">
   <meta property="og:url" content="/">
-  <meta name="og:description" content=">The network map for navigating our growing suburban and regional railway network.">
+  <meta name="og:description" content="The network map for navigating our growing suburban and regional railway network.">
   <meta property="og:image" content="img/C6001.png">
 
   <link rel="manifest" href="site.webmanifest">
