--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
     <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
       <div class="nsw-card">
         <div class="nsw-card__image">
-          <img src="./img/unique.jfif" alt="HarlonTransit bus">
+          <img src="./img/C6001.png" alt="C6001">
         </div>
         <div class="nsw-card__content">
           <div class="nsw-card__title">
-            <a href="./map.html">HarlonTransit Map</a>
+            <a href="/map" style="color: #000">Network Map</a>
           </div>
-          <div class="nsw-card__copy">HarlonTransit's official map is a reliable companion for navigating our network.</div>
+          <div class="nsw-card__copy" style="color: #000>The official suburban & regional railway network map.</div>
           <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
         </div>
       </div>
@@ -197,19 +197,19 @@
 <footer class="nsw-footer nsw-footer--dark">
   <div class="nsw-footer__lower">
     <div class="nsw-container">
-      <p>HarlonTransit: <strong>Keeping You Moving</strong></p>
-      <hr>
-      <ul>
-        <li><a href="https://discord.gg/qMmk8MuEBz" target="_blank" rel="noopener noreferrer">Discord</a></li>
-        <li><a href="https://youtube.com/channel/UCUsBniuYo4fKNWy-PcAoDNg" target="_blank" rel="noopener noreferrer">YouTube</a></li>
-        <li><a href="https://twitter.com/HarlonServer" target="_blank" rel="noopener noreferrer">X/Twitter</a></li>
-        <li><a href="https://www.tiktok.com/@harlonserver" target="_blank" rel="noopener noreferrer">Tiktok</a></li>
-        <li><a href="https://www.github.com/HarlonServer" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+      <p style="color:#000">Transnet - <strong>Thornsbury's train, tram & bus operator.</strong></p>
+      <hr style="background-color:#000">
+      <ul style="color:#000">
+        <li><a style="color:#000" href="https://discord.gg/qMmk8MuEBz" target="_blank" rel="noopener noreferrer">Discord</a></li>
+        <li><a style="color:#000"  href="https://youtube.com/channel/UCUsBniuYo4fKNWy-PcAoDNg" target="_blank" rel="noopener noreferrer">YouTube</a></li>
+        <li><a  style="color:#000" href="https://twitter.com/HarlonServer" target="_blank" rel="noopener noreferrer">X/Twitter</a></li>
+        <li><a  style="color:#000" href="https://www.tiktok.com/@harlonserver" target="_blank" rel="noopener noreferrer">Tiktok</a></li>
+        <li><a  style="color:#000" href="https://www.github.com/HarlonServer" target="_blank" rel="noopener noreferrer">GitHub</a></li>
         <!--<li><a href="https://store.harlonserver.net" target="_blank" rel="noopener noreferrer">Server Store</a></li>-->
       </ul>
       <div class="nsw-footer__info">
-        <div class="nsw-footer__copyright">Copyright © Harlon City Server. NOT AN OFFICIAL MINECRAFT SERVER. NOT APPROVED BY OR ASSOCIATED WITH MOJANG OR MICROSOFT CORPORATION.</div>
-        <div class="nsw-footer__built">Powered by the <a href="https://digitalnsw.github.io/nsw-design-system/" target="_blank" rel="noopener noreferrer">NSW Design System,</a><a href="https://html5boilerplate.com/" target="_blank" rel="noopener noreferrer">HTML5 Boilerplate</a>and <a href="https://www.11ty.dev/" target="_blank" rel="noopener noreferrer">Eleventy.</a></div>
+        <div class="nsw-footer__copyright" style="color:#000">Copyright © 2024 - Transnet | Transnet is maintaned and controlled by the Thornsbury Government Department of Public Transport</div>
+<img src="https://transnetpt.com/img/TG-DPT-logo.png" alt="Thornsbury Government - Department of Public Transport Logo" style="width: 25%">
       </div>
     </div>
   </div>
