--- a/map.html
+++ b/map.html
@@ -132,7 +132,7 @@
   <div class="nsw-footer__lower">
     <div class="nsw-container">
       <p style="color:#000">Transnet - <strong>Thornsbury's train, tram & bus operator.</strong></p>
-      <hr style="color:#000">
+      <hr style="background-color:#000">
       <ul style="color:#000">
         <li><a style="color:#000" href="https://discord.gg/qMmk8MuEBz" target="_blank" rel="noopener noreferrer">Discord</a></li>
         <li><a style="color:#000"  href="https://youtube.com/channel/UCUsBniuYo4fKNWy-PcAoDNg" target="_blank" rel="noopener noreferrer">YouTube</a></li>
