--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <div class="nsw-card__title">
             <a href="/map" style="color: #000">Network Map</a>
           </div>
-          <div class="nsw-card__copy" style="color: #000>The official suburban & regional railway network map.</div>
+          <div class="nsw-card__copy" style="color: #000">The official suburban & regional railway network map.</div>
           <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
         </div>
       </div>
