--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="utf-8">
-  <title>Home | Harlon Transit</title>
-  <meta name="description" content="HarlonTransit is the government-owned public transport operator within the city of Harlon.">
-  <meta property="og:title" content="Home | Harlon Transit">
+  <title>Transnet</title>
+  <meta name="description" content="Thornsbury's train, tram & bus operator.">
+  <meta property="og:title" content="Transnet">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://ht.harlonserver.net">
-  <meta name="og:description" content="HarlonTransit is the government-owned public transport operator within the city of Harlon.">
+  <meta property="og:url" content="/">
+  <meta name="og:description" content="Thornsbury's train, tram & bus operator.">
   <meta property="og:image" content="https://ht.harlonserver.net/img/transit-1.jpg">
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="apple-touch-icon" href="/favicon.png">
+  <link rel="icon" href="/img/icon.png" sizes="any">
+  <link rel="apple-touch-icon" href="/img/icon.png">
   <!-- Place favicon.ico in the root directory -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/nsw-design-system@3/dist/css/main.css">
+  <link rel="stylesheet" href="/css/nsw-design.css">
   <link rel="stylesheet" href="/css/hcs.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -102,11 +102,11 @@
     <div class="nsw-hero-banner__container">
       <div class="nsw-hero-banner__wrapper">
         <div class="nsw-hero-banner__content">
-          <h1>HarlonTransit</h1>
-          <p class="nsw-intro">HarlonTransit is the government-owned public transport operator within the city of Harlon.</p>
+          <h1 style="color:#000>Welcome to the new & improved Transnet website.</h1>
+          <p class="nsw-intro" style="color:#000>We welcome those onto our new website with open arms</p>
         </div>
         <div class="nsw-hero-banner__box">
-          <img class="nsw-hero-banner__image" src="./img/m5-x-stock.png" alt="Image of two M5 Metro trains passing each other at the Johnson Park tunnel portal">
+          <img class="nsw-hero-banner__image" src="/img/cover.png" alt="C6003 entering Avandale">
         </div>
       </div>
     </div>
@@ -161,29 +161,52 @@
     </div>
   </div>
   
-  <h1>Related websites</h1>
-  <div class="nsw-link-list">
-    <ul>
-      <li>
-        <a href="https://harlonserver.net" target="_blank" rel="noopener noreferrer">
-          <span>Main Harlon City Server Website</span>
+  <h1>Transnet News:</h1>
+  <div class="nsw-grid">
+    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+      <div class="nsw-card">
+        <div class="nsw-card__image">
+          <img src="./img/rail-replacement.png" alt="">
+        </div>
+        <div class="nsw-card__content">
+          <div class="nsw-card__title">
+            <a href="/news/crosscity-works" style="color: #000">Cross City Improvement works</a>
+          </div>
+          <div class="nsw-card__copy" style="color: #000">We're currently improving the Avandale, Morrinallea, Wynthorpe & Wellington Lines, to allow more trains, more often.</div>
           <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
-        </a>
-      </li>
-      <!-- <li>
-        <a href="#">
-          <span>Harlonian National (for all intercity and national rail and coach services)</span>
+        </div>
+      </div>
+    </div>
+    <!--<div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+      <div class="nsw-card">
+        <div class="nsw-card__image">
+          <img src="/img/slideshow-2.png" alt="Lorum Ipsum">
+        </div>
+        <div class="nsw-card__content">
+          <div class="nsw-card__title">
+            <a href="./tripplanner/">HarlonTransit Trip Planner</a>
+          </div>
+          <div class="nsw-card__copy">Plan your trip from A to B easily with our interactive Trip Planner.</div>
           <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <span>Sealand Area Rapid Transit (SART)</span>
+        </div>
+      </div>
+    </div>-->
+    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+      <div class="nsw-card">
+        <div class="nsw-card__image">
+          <img src="./img/dynmap.png" alt="Screenshot of Harlon City Server's dynmap">
+        </div>
+        <div class="nsw-card__content">
+          <div class="nsw-card__title">
+            <a href="https://dynmap.harlonserver.net" target="_blank" rel="noopener noreferrer">Dynmap</a>
+          </div>
+          <div class="nsw-card__copy">Find stations, landmarks and more on the server and track your location in real time.</div>
           <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
-        </a>
-      </li> -->
-    </ul>
+        </div>
+      </div>
+    </div>
   </div>
+
   
 
   <br>
