--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
     <div class="nsw-hero-banner__container">
       <div class="nsw-hero-banner__wrapper">
         <div class="nsw-hero-banner__content">
-          <h1 style="color:#000>Welcome to the new & improved Transnet website.</h1>
-          <p class="nsw-intro" style="color:#000>We welcome those onto our new website with open arms</p>
+          <h1 style="color:#000">Welcome to the new & improved Transnet website.</h1>
+          <p class="nsw-intro" style="color:#000">We welcome those onto our new website with open arms</p>
         </div>
         <div class="nsw-hero-banner__box">
           <img class="nsw-hero-banner__image" src="/img/cover.png" alt="C6003 entering Avandale">
