--- a/index.html
+++ b/index.html
@@ -131,32 +131,6 @@
         </div>
       </div>
     </div>
-    <!--<div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-card">
-        <div class="nsw-card__image">
-          <img src="./img/slideshow-2.png" alt="HarlonTransit Metro train">
-        </div>
-        <div class="nsw-card__content">
-          <div class="nsw-card__title">
-            <a href="./tripplanner/">HarlonTransit Trip Planner</a>
-          </div>
-          <div class="nsw-card__copy">Plan your trip from A to B easily with our interactive Trip Planner.</div>
-          <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
-        </div>
-      </div>
-    </div>-->
-    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-card">
-        <div class="nsw-card__image">
-          <img src="./img/dynmap.png" alt="Screenshot of Harlon City Server's dynmap">
-        </div>
-        <div class="nsw-card__content">
-          <div class="nsw-card__title">
-            <a href="https://dynmap.harlonserver.net" target="_blank" rel="noopener noreferrer">Dynmap</a>
-          </div>
-          <div class="nsw-card__copy">Find stations, landmarks and more on the server and track your location in real time.</div>
-          <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
-        </div>
       </div>
     </div>
   </div>
@@ -177,32 +151,20 @@
         </div>
       </div>
     </div>
-    <!--<div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
       <div class="nsw-card">
         <div class="nsw-card__image">
-          <img src="/img/slideshow-2.png" alt="Lorum Ipsum">
+          <img src="/img/carlisle.png" alt="Lorum Ipsum">
         </div>
         <div class="nsw-card__content">
           <div class="nsw-card__title">
-            <a href="./tripplanner/">HarlonTransit Trip Planner</a>
+            <a href="/">Sample Text</a>
           </div>
           <div class="nsw-card__copy">Plan your trip from A to B easily with our interactive Trip Planner.</div>
           <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
         </div>
       </div>
-    </div>-->
-    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-card">
-        <div class="nsw-card__image">
-          <img src="./img/dynmap.png" alt="Screenshot of Harlon City Server's dynmap">
-        </div>
-        <div class="nsw-card__content">
-          <div class="nsw-card__title">
-            <a href="https://dynmap.harlonserver.net" target="_blank" rel="noopener noreferrer">Dynmap</a>
-          </div>
-          <div class="nsw-card__copy">Find stations, landmarks and more on the server and track your location in real time.</div>
-          <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
-        </div>
+    </div>
       </div>
     </div>
   </div>
