--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <div class="nsw-card__title">
             <a href="/">Sample Text</a>
           </div>
-          <div class="nsw-card__copy">Plan your trip from A to B easily with our interactive Trip Planner.</div>
+          <div class="nsw-card__copy" style="color: #000">Lorum Ipsum</div>
           <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
         </div>
       </div>
