--- a/index.html
+++ b/index.html
@@ -135,42 +135,41 @@
     </div>
   </div>
   
-  <h1>Transnet News:</h1>
+<div class="nsw-m-right-md nsw-m-left-md">
+<div class="nsw-p-top-sm">
+<h1>Transnet News:</h1>
 </div>
   <div class="nsw-grid">
     <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
       <div class="nsw-card">
         <div class="nsw-card__image">
-          <img src="./img/rail-replacement.png" alt="">
+          <img src="./img/rail-replacement.png" alt="C6001">
         </div>
         <div class="nsw-card__content">
           <div class="nsw-card__title">
-            <a href="/news/crosscity-works" style="color: #000">Cross City Improvement works</a>
+            <a href="/map" style="color: #000">Network Map</a>
           </div>
-          <div class="nsw-card__copy" style="color: #000">We're currently improving the Avandale, Morrinallea, Wynthorpe & Wellington Lines, to allow more trains, more often.</div>
+          <div class="nsw-card__copy" style="color: #000">The official suburban & regional railway network map.</div>
           <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
         </div>
-      </div>
-    </div>
-</div>
-    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+<div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
       <div class="nsw-card">
         <div class="nsw-card__image">
-          <img src="/img/carlisle.png" alt="Lorum Ipsum">
+          <img src="./img/rail-replacement.png" alt="C6001">
         </div>
         <div class="nsw-card__content">
           <div class="nsw-card__title">
-            <a href="/">Sample Text</a>
+            <a href="/map" style="color: #000">Network Map</a>
           </div>
-          <div class="nsw-card__copy" style="color: #000">Lorum Ipsum</div>
+          <div class="nsw-card__copy" style="color: #000">The official suburban & regional railway network map.</div>
           <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
         </div>
+
       </div>
     </div>
       </div>
     </div>
   </div>
-</div>
 
   
 
