--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 </head>
 
 
-<body>
+<body style="letter-spacing: -0.0045em;">
   
   <div class="nsw-hero-banner nsw-hero-banner--dark">
     <div class="nsw-hero-banner__container">
@@ -140,19 +140,10 @@
 <h1>Transnet News:</h1>
 </div>
   <div class="nsw-grid">
-    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-card">
-        <div class="nsw-card__image">
-          <img src="./img/rail-replacement.png" alt="C6001">
-        </div>
-        <div class="nsw-card__content">
-          <div class="nsw-card__title">
-            <a href="/map" style="color: #000">Network Map</a>
-          </div>
-          <div class="nsw-card__copy" style="color: #000">The official suburban & regional railway network map.</div>
-          <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
+    lass="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
         </div>
       </div>
+    </div>
 <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
       <div class="nsw-card">
         <div class="nsw-card__image">
@@ -165,8 +156,21 @@
           <div class="nsw-card__copy" style="color: #000">The official suburban & regional railway network map.</div>
           <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
         </div>
-
+      </div>
     </div>
+  </div>
+<div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+      <div class="nsw-card">
+        <div class="nsw-card__image">
+          <img src="./img/rail-replacement.png" alt="C6001">
+        </div>
+        <div class="nsw-card__content">
+          <div class="nsw-card__title">
+            <a href="/map" style="color: #000">Network Map</a>
+          </div>
+          <div class="nsw-card__copy" style="color: #000">The official suburban & regional railway network map.</div>
+          <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
+        </div>
       </div>
     </div>
   </div>
