--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 </head>
 
 
-<body style="letter-spacing: -0.0045em;">
+<body>
   
   <div class="nsw-hero-banner nsw-hero-banner--dark">
     <div class="nsw-hero-banner__container">
@@ -131,48 +131,56 @@
         </div>
       </div>
     </div>
+
+    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+      <div class="nsw-card">
+        <div class="nsw-card__image">
+          <img src="./img/dynmap.png" alt="Screenshot of Harlon City Server's dynmap">
+        </div>
+        <div class="nsw-card__content">
+          <div class="nsw-card__title">
+            <a href="https://dynmap.harlonserver.net" target="_blank" rel="noopener noreferrer">Dynmap</a>
+          </div>
+          <div class="nsw-card__copy">Find stations, landmarks and more on the server and track your location in real time.</div>
+          <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
+        </div>
       </div>
     </div>
   </div>
   
-<div class="nsw-m-right-md nsw-m-left-md">
-<div class="nsw-p-top-sm">
-<h1>Transnet News:</h1>
-</div>
+  <h1>Transnet News:</h1>
   <div class="nsw-grid">
-        </div>
-      </div>
-    </div>
-<div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
       <div class="nsw-card">
         <div class="nsw-card__image">
-          <img src="./img/rail-replacement.png" alt="C6001">
+          <img src="./img/rail-replacement.png" alt="">
         </div>
         <div class="nsw-card__content">
           <div class="nsw-card__title">
-            <a href="/map" style="color: #000">Network Map</a>
+            <a href="/news/crosscity-works" style="color: #000">Cross City Improvement works</a>
           </div>
-          <div class="nsw-card__copy" style="color: #000">The official suburban & regional railway network map.</div>
-          <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
+          <div class="nsw-card__copy" style="color: #000">We're currently improving the Avandale, Morrinallea, Wynthorpe & Wellington Lines, to allow more trains, more often.</div>
+                   <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
         </div>
       </div>
     </div>
-<div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+
+    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
       <div class="nsw-card">
         <div class="nsw-card__image">
-          <img src="./img/rail-replacement.png" alt="C6001">
+          <img src="./img/carlisle.png" alt="Screenshot of Harlon City Server's dynmap">
         </div>
         <div class="nsw-card__content">
           <div class="nsw-card__title">
-            <a href="/map" style="color: #000">Network Map</a>
+            <a href="/" target="_blank" rel="noopener noreferrer" style="color:#000">Testing</a>
           </div>
-          <div class="nsw-card__copy" style="color: #000">The official suburban & regional railway network map.</div>
+          <div class="nsw-card__copy" style="color:#000">Sample text.</div>
           <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
         </div>
       </div>
     </div>
   </div>
-</div>
+
   
 
   <br>
