--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       </div>
     </div>
 
-    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+    <!-- <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
       <div class="nsw-card">
         <div class="nsw-card__image">
           <img src="./img/dynmap.png" alt="Screenshot of Harlon City Server's dynmap">
@@ -143,7 +143,7 @@
           </div>
           <div class="nsw-card__copy">Find stations, landmarks and more on the server and track your location in real time.</div>
           <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
