--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 </head>
 
 
-<body>
+<body style="letter-spacing: -0.0045em;">
   
   <div class="nsw-hero-banner nsw-hero-banner--dark">
     <div class="nsw-hero-banner__container">
