--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
             <a href="https://dynmap.harlonserver.net" target="_blank" rel="noopener noreferrer">Dynmap</a>
           </div>
           <div class="nsw-card__copy">Find stations, landmarks and more on the server and track your location in real time.</div>
-          <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
-        </div> -->
+          <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>-->
+        </div> 
       </div>
     </div>
   </div>
