--- a/index.html
+++ b/index.html
@@ -148,6 +148,8 @@
     </div>
   </div>
   
+  <div class="nsw-m-right-md nsw-m-left-md">
+    <div class="nsw-p-top-sm">
   <h1>Transnet News:</h1>
   <div class="nsw-grid">
     <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
